--- a/index.html
+++ b/index.html
@@ -2,8 +2,53 @@
 <html>
   <head>
     <title>Broadway</title>
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Testing 123</h1>
+    <div class="mainheader">
+      <h1>Broadway Design</h1>
+      <nav>
+      <div class="headerlinks">
+        <a href="#home">Home</a>
+        <a href="#process">Process</a>
+        <a href="#work">Work</a>
+        <a href="#team">Team</a>
+        <a href="#contact">Contact</a>
+      </div>
+      </nav>
+    </div>
+
+    <div id="process">
+      <h2>Our Process</h2>
+      <img>
+      <p>Identity</p>
+      <p>We focus on the most important details.</p>
+      <img>
+      <h2>Understand</h2>
+      <p>We study our projects inside and out.</p>
+      <img>
+      <h2>Execute</h2>
+      <p>We put everything we have into our work.</p>
+    </div>
+
+    <div id="work">
+      <h2>Designes in New York</h2>
+      <h2>Portfolio</h2>
+      <p>Coming Soon</p>
+    </div>
+
+    <div id="team">
+      <h2>Team</h2>
+      <p>We're Hiring!</p>
+    </div>
+
+    <div id="contact">
+      <h2>Contact</h2>
+      <p>(555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
+      
+
   </body>
 </html>
