Added icons, footer, corrections to shell.

--- a/index.html
+++ b/index.html
@@ -9,30 +9,31 @@
       <h1>Broadway Design</h1>
       <nav>
       <div class="headerlinks">
-        <a href="#home">Home</a>
-        <a href="#process">Process</a>
-        <a href="#work">Work</a>
-        <a href="#team">Team</a>
-        <a href="#contact">Contact</a>
+        <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#process">Process</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#contact">Contact</a></li>
       </div>
       </nav>
     </div>
 
     <div id="process">
       <h2>Our Process</h2>
-      <img>
-      <p>Identity</p>
+      <img src="resources/images/identify.svg">
+      <h2>Identity</h2>
       <p>We focus on the most important details.</p>
-      <img>
+      <img src="resources/images/understand.svg">
       <h2>Understand</h2>
       <p>We study our projects inside and out.</p>
-      <img>
+      <img src="resources/images/execute.svgcd">
       <h2>Execute</h2>
       <p>We put everything we have into our work.</p>
     </div>
 
     <div id="work">
-      <h2>Designes in New York</h2>
+      <h2>Designed in New York</h2>
       <h2>Portfolio</h2>
       <p>Coming Soon</p>
     </div>
@@ -48,7 +49,15 @@
       <p>E-mail: test@example.com</p>
       <p>Twitter: @test</p>
     </div>
-      
+
+    <footer class="foot">
+      <p>&copy Broadway</p>
+      <a href="#home">Home</a>
+      <a href="#process">Process</a>
+      <a href="#work">Work</a>
+      <a href="#team">Team</a>
+      <a href="#contact">Contact</a>
+    </footer>
 
   </body>
 </html>
