Missing background images.

--- a/index.html
+++ b/index.html
@@ -5,58 +5,59 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="mainheader">
+    <div id="mainheader">
       <h1>Broadway Design</h1>
-      <nav>
       <div class="headerlinks">
-        <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#process">Process</a></li>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#team">Team</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <nav>
+         <p><a href="#mainheader">Home</a></p>
+         <p><a href="#process">Process</a></p>
+         <p><a href="#work">Work</a></p>
+         <p><a href="#team">Team</a></p>
+         <p><a href="#contact">Contact</a></p>
+        </nav>
       </div>
-      </nav>
+
     </div>
 
-    <div id="process">
-      <h2>Our Process</h2>
-      <img src="resources/images/identify.svg">
-      <h2>Identity</h2>
+    <div id="process" class="process">
+      <h2 class="about">Our Process</h2>
+      <img src="resources/icons/identify.svg">
+      <h2 class= "font weight">Identity</h2>
       <p>We focus on the most important details.</p>
-      <img src="resources/images/understand.svg">
-      <h2>Understand</h2>
+      <img src="resources/icons/understand.svg">
+      <h2 class= "font weight">Understand</h2>
       <p>We study our projects inside and out.</p>
-      <img src="resources/images/execute.svgcd">
-      <h2>Execute</h2>
+      <img src="resources/icons/execute.svg">
+      <h2 class= "font weight">Execute</h2>
       <p>We put everything we have into our work.</p>
     </div>
 
-    <div id="work">
-      <h2>Designed in New York</h2>
-      <h2>Portfolio</h2>
+    <div id="work" class="work">
+      <h2 class="design" "font weight">Designed in New York</h2>
+      <h2 class= "font weight">Portfolio</h2>
       <p>Coming Soon</p>
     </div>
 
     <div id="team">
-      <h2>Team</h2>
+      <h2 class= "font weight">Team</h2>
       <p>We're Hiring!</p>
     </div>
 
     <div id="contact">
-      <h2>Contact</h2>
+      <h2 class= "font weight">Contact</h2>
       <p>(555)-555-5555</p>
       <p>E-mail: test@example.com</p>
       <p>Twitter: @test</p>
     </div>
 
     <footer class="foot">
-      <p>&copy Broadway</p>
-      <a href="#home">Home</a>
+      <p>&copy Broadway 2016
+      <a href="#mainheader">Home</a>
       <a href="#process">Process</a>
       <a href="#work">Work</a>
       <a href="#team">Team</a>
       <a href="#contact">Contact</a>
+    </p>
     </footer>
 
   </body>
