Finally figured out background image solution.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <div id="mainheader">
-      <h1>Broadway Design</h1>
-      <div class="headerlinks">
+      <h1 class="header1">Broadway Design</h1>
+      <div class= "header">
         <nav>
          <p><a href="#mainheader">Home</a></p>
          <p><a href="#process">Process</a></p>
@@ -16,30 +16,29 @@
          <p><a href="#contact">Contact</a></p>
         </nav>
       </div>
-
     </div>
 
     <div id="process" class="process">
-      <h2 class="about">Our Process</h2>
+      <h2 id="about">Our Process</h2>
       <img src="resources/icons/identify.svg">
-      <h2 class= "font weight">Identity</h2>
+      <h2>Identity</h2>
       <p>We focus on the most important details.</p>
       <img src="resources/icons/understand.svg">
-      <h2 class= "font weight">Understand</h2>
+      <h2>Understand</h2>
       <p>We study our projects inside and out.</p>
       <img src="resources/icons/execute.svg">
-      <h2 class= "font weight">Execute</h2>
+      <h2>Execute</h2>
       <p>We put everything we have into our work.</p>
     </div>
 
     <div id="work" class="work">
       <h2 class="design" "font weight">Designed in New York</h2>
-      <h2 class= "font weight">Portfolio</h2>
+      <h2 class= "size weight">Portfolio</h2>
       <p>Coming Soon</p>
     </div>
 
     <div id="team">
-      <h2 class= "font weight">Team</h2>
+      <h2 class= "size weight">Team</h2>
       <p>We're Hiring!</p>
     </div>
 
